--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -1,110 +1,340 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Admin - Centro de Compras</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Adicionar Produtos</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body { 
+      font-family: 'Roboto', Arial, sans-serif; 
+      padding: 20px; 
+      background-color: #f5f5f5; 
+    }
+    h1 { 
+      text-align: center; 
+      color: #333; 
+    }
+    form { 
+      max-width: 500px; 
+      margin: auto; 
+      display: flex; 
+      flex-direction: column; 
+      gap: 10px; 
+      background: white; 
+      padding: 20px; 
+      border-radius: 8px; 
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    }
+    input, select, button { 
+      padding: 10px; 
+      border: 1px solid #ddd; 
+      border-radius: 4px; 
+      font-size: 16px; 
+    }
+    button { 
+      background-color: #ff6200; 
+      color: white; 
+      border: none; 
+      cursor: pointer; 
+      font-weight: bold; 
+    }
+    button:hover { 
+      background-color: #e55a00; 
+    }
+    #mensagem { 
+      margin-top: 10px; 
+      color: green; 
+      text-align: center; 
+    }
+    #erro { 
+      margin-top: 10px; 
+      color: red; 
+      text-align: center; 
+    }
+    .produto-lista { 
+      margin-top: 20px; 
+      max-width: 500px; 
+      margin: auto; 
+      max-height: 500px; 
+      overflow-y: auto; 
+      padding: 10px; 
+      background: white; 
+      border-radius: 8px; 
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    }
+    .produto-item { 
+      display: flex; 
+      justify-content: space-between; 
+      align-items: center; 
+      padding: 8px; 
+      background: #f9f9f9; 
+      border-radius: 4px; 
+      margin-bottom: 5px; 
+      font-size: 14px; 
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); 
+    }
+    .produto-item button { 
+      background-color: #d32f2f; 
+      color: white; 
+      border: none; 
+      cursor: pointer; 
+      padding: 4px 8px; 
+      border-radius: 4px; 
+      font-size: 12px; 
+    }
+    .produto-item button:hover { 
+      background-color: #b71c1c; 
+    }
+    .produto-item img { 
+      max-width: 30px; 
+      max-height: 30px; 
+      margin-left: 8px; 
+      border-radius: 4px; 
+      object-fit: contain; 
+    }
+    .produto-info { 
+      flex: 1; 
+      overflow: hidden; 
+      text-overflow: ellipsis; 
+      white-space: nowrap; 
+    }
+    .produto-info strong { 
+      font-size: 14px; 
+    }
+    .produto-info span, .produto-info a { 
+      font-size: 12px; 
+      color: #666; 
+    }
+    .paginacao { 
+      margin-top: 10px; 
+      text-align: center; 
+    }
+    .paginacao button { 
+      background-color: #FFA500; 
+      color: white; 
+      border: none; 
+      padding: 8px 12px; 
+      margin: 0 5px; 
+      border-radius: 4px; 
+      cursor: pointer; 
+      font-size: 14px; 
+    }
+    .paginacao button:disabled { 
+      background-color: #ccc; 
+      cursor: not-allowed; 
+    }
+    .paginacao button:hover:not(:disabled) { 
+      background-color: #e59400; 
+    }
+  </style>
 </head>
 <body>
-    <header class="main-header">
-        <div class="container">
-            <div class="header-content">
-                <div class="logo-section">
-                    <img src="/images/cdc.png" alt="Centro de Compras" class="logo">
-                </div>
-                <div class="header-actions">
-                    <a href="/index.html" class="action-btn">Voltar ao Site</a>
-                </div>
-            </div>
-        </div>
-    </header>
+  <h1>Adicionar Produto</h1>
+  <form id="form-produto" enctype="multipart/form-data">
+    <input type="text" name="nome" placeholder="Nome do produto" required>
+    <select name="categoria" required>
+      <option value="" disabled selected>Selecione uma categoria</option>
+      <option value="eletronicos">Eletrônicos</option>
+      <option value="moda">Moda</option>
+      <option value="fitness">Fitness</option>
+      <option value="casa">Casa e Decoração</option>
+      <option value="beleza">Beleza</option>
+      <option value="esportes">Esportes</option>
+      <option value="livros">Livros</option>
+      <option value="infantil">Infantil</option>
+      <option value="Celulares">Celulares</option>
+      <option value="Eletrodomésticos">Eletrodomésticos</option>
+    </select>
+    <select name="loja" required>
+      <option value="" disabled selected>Selecione uma loja</option>
+      <option value="amazon">Amazon</option>
+      <option value="magalu">Magalu</option>
+      <option value="shein">Shein</option>
+      <option value="shopee">Shopee</option>
+      <option value="mercadolivre">Mercado Livre</option>
+      <option value="alibaba">Alibaba</option>
+    </select>
+    <input type="url" name="link" placeholder="Link do produto (https://...)" required pattern="https?://.+">
+    <input type="file" name="imagens" accept="image/*" multiple>
+    <button type="submit">Adicionar</button>
+  </form>
+  <div id="mensagem"></div>
+  <div id="erro"></div>
 
-    <main class="main-content">
-        <div class="container">
-            <section class="admin-section">
-                <h2><i class="fas fa-cogs"></i> Gerenciar Produtos</h2>
-                <form id="form-produto" enctype="multipart/form-data">
-                    <input type="hidden" id="id" name="id">
-                    <div class="form-group">
-                        <label for="nome">Nome do Produto</label>
-                        <input type="text" id="nome" name="nome" required maxlength="255">
-                    </div>
-                    <div class="form-group">
-                        <label for="descricao">Descrição</label>
-                        <textarea id="descricao" name="descricao" required maxlength="255"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="preco">Preço (R$)</label>
-                        <input type="number" id="preco" name="preco" step="0.01" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="link">Link do Produto</label>
-                        <input type="url" id="link" name="link" required maxlength="255">
-                    </div>
-                    <div class="form-group">
-                        <label for="categoria">Categoria</label>
-                        <select id="categoria" name="categoria" required>
-                            <option value="">Selecione a categoria</option>
-                            <option value="eletronicos">Eletrônicos</option>
-                            <option value="moda">Moda</option>
-                            <option value="fitness">Fitness</option>
-                            <option value="casa">Casa</option>
-                            <option value="beleza">Beleza</option>
-                            <option value="esportes">Esportes</option>
-                            <option value="livros">Livros</option>
-                            <option value="infantil">Infantil</option>
-                            <option value="celulares">Celulares</option>
-                            <option value="eletrodomesticos">Eletrodomésticos</option>
-                            <option value="pet">Pet</option>
-                            <option value="jardinagem">Jardinagem</option>
-                            <option value="automotivo">Automotivo</option>
-                            <option value="gastronomia">Gastronomia</option>
-                            <option value="games">Games</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="loja">Loja</label>
-                        <select id="loja" name="loja" required>
-                            <option value="">Selecione a loja</option>
-                            <option value="amazon">Amazon</option>
-                            <option value="mercadolivre">Mercado Livre</option>
-                            <option value="shopee">Shopee</option>
-                            <option value="magalu">Magalu</option>
-                            <option value="shein">Shein</option>
-                            <option value="alibaba">Alibaba</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="imagens">Imagens do Produto</label>
-                        <input type="file" id="imagens" name="imagens" multiple accept="image/*">
-                        <div id="image-preview" class="image-preview"></div>
-                    </div>
-                    <div class="form-actions">
-                        <button type="submit" class="btn-primary"><i class="fas fa-save"></i> Salvar</button>
-                        <button type="button" id="cancelar" class="btn-secondary" style="display: none;"><i class="fas fa-times"></i> Cancelar</button>
-                    </div>
-                    <div id="error-message" class="error-message" style="display: none;"></div>
-                </form>
-            </section>
+  <div class="produto-lista" id="produto-lista"></div>
+  <div class="paginacao" id="paginacao"></div>
 
-            <section class="admin-section">
-                <h2><i class="fas fa-list"></i> Produtos Cadastrados</h2>
-                <div id="admin-produtos" class="admin-produtos"></div>
-            </section>
-        </div>
-    </main>
+  <script>
+    // Carregar produtos do localStorage
+    let produtos = JSON.parse(localStorage.getItem('produtos')) || [];
+    let paginaAtual = 1;
+    const itensPorPagina = 20;
 
-    <footer class="main-footer">
-        <div class="container">
-            <div class="footer-bottom">
-                <p>&copy; <span id="year"></span> Centro de Compras. Todos os direitos reservados.</p>
-            </div>
-        </div>
-    </footer>
+    // Exibir produtos ao carregar a página
+    exibirProdutos();
 
-    <script src="/admin-script.js"></script>
+    // Função para redimensionar imagem
+    async function resizeImage(file, maxWidth, maxHeight) {
+      return new Promise((resolve, reject) => {
+        if (file.size > 2 * 1024 * 1024) {
+          reject(new Error('Imagem muito grande. Máximo 2 MB.'));
+        }
+
+        const img = new Image();
+        img.src = URL.createObjectURL(file);
+        img.onload = () => {
+          const canvas = document.createElement('canvas');
+          let width = img.width;
+          let height = img.height;
+
+          if (width > height) {
+            if (width > maxWidth) {
+              height = Math.round((height * maxWidth) / width);
+              width = maxWidth;
+            }
+          } else {
+            if (height > maxHeight) {
+              width = Math.round((width * maxHeight) / height);
+              height = maxHeight;
+            }
+          }
+
+          canvas.width = width;
+          canvas.height = height;
+          const ctx = canvas.getContext('2d');
+          ctx.drawImage(img, 0, 0, width, height);
+
+          canvas.toBlob(blob => {
+            resolve(blob);
+          }, 'image/jpeg', 0.8);
+        };
+        img.onerror = reject;
+      });
+    }
+
+    // Adicionando um produto
+    document.getElementById('form-produto').addEventListener('submit', async e => {
+      e.preventDefault();
+
+      const mensagem = document.getElementById('mensagem');
+      const erro = document.getElementById('erro');
+
+      const nome = e.target.querySelector('input[name="nome"]').value;
+      const categoria = e.target.querySelector('select[name="categoria"]').value;
+      const loja = e.target.querySelector('select[name="loja"]').value;
+      const link = e.target.querySelector('input[name="link"]').value;
+      const imagens = e.target.querySelector('input[name="imagens"]').files;
+
+      if (!nome || !categoria || !loja || !link) {
+        erro.textContent = 'Todos os campos são obrigatórios!';
+        mensagem.textContent = '';
+        return;
+      }
+      if (imagens.length === 0) {
+        erro.textContent = 'Pelo menos uma imagem deve ser escolhida!';
+        mensagem.textContent = '';
+        return;
+      }
+      if (imagens.length > 3) {
+        erro.textContent = 'Máximo de 3 imagens por produto!';
+        mensagem.textContent = '';
+        return;
+      }
+
+      try {
+        const imagensArray = await Promise.all(
+          Array.from(imagens).map(async file => {
+            const resizedBlob = await resizeImage(file, 300, 300);
+            return new Promise((resolve, reject) => {
+              const reader = new FileReader();
+              reader.onload = () => resolve(reader.result);
+              reader.onerror = reject;
+              reader.readAsDataURL(resizedBlob);
+            });
+          })
+        );
+
+        const novoProduto = { nome, categoria, loja, link, imagens: imagensArray };
+        produtos.push(novoProduto);
+
+        localStorage.setItem('produtos', JSON.stringify(produtos));
+
+        paginaAtual = Math.ceil(produtos.length / itensPorPagina);
+        exibirProdutos();
+
+        mensagem.textContent = 'Produto adicionado com sucesso!';
+        erro.textContent = '';
+        e.target.reset();
+      } catch (error) {
+        erro.textContent = error.message || 'Erro ao processar as imagens. Tente novamente.';
+        mensagem.textContent = '';
+      }
+    });
+
+    // Exibindo os produtos
+    function exibirProdutos() {
+      const listaProdutos = document.getElementById('produto-lista');
+      const paginacao = document.getElementById('paginacao');
+      listaProdutos.innerHTML = '';
+
+      if (produtos.length === 0) {
+        listaProdutos.innerHTML = '<p>Nenhum produto adicionado ainda.</p>';
+        paginacao.innerHTML = '';
+        return;
+      }
+
+      const inicio = (paginaAtual - 1) * itensPorPagina;
+      const fim = inicio + itensPorPagina;
+      const produtosPaginados = produtos.slice(inicio, fim);
+
+      produtosPaginados.forEach((produto, index) => {
+        const globalIndex = inicio + index;
+        const divProduto = document.createElement('div');
+        divProduto.classList.add('produto-item');
+
+        divProduto.innerHTML = `
+          <div class="produto-info">
+            <strong title="${produto.nome}">${produto.nome}</strong>
+            <span>C: ${produto.categoria} | L: ${produto.loja}</span>
+            <a href="${produto.link}" target="_blank" title="${produto.link}">Link</a>
+          </div>
+          <div>
+            ${produto.imagens[0] ? `<img src="${produto.imagens[0]}" alt="Imagem do produto">` : ''}
+            <button onclick="removerProduto(${globalIndex})">Excluir</button>
+          </div>
+        `;
+        listaProdutos.appendChild(divProduto);
+      });
+
+      // Paginação
+      const totalPaginas = Math.ceil(produtos.length / itensPorPagina);
+      paginacao.innerHTML = `
+        <button onclick="mudarPagina(${paginaAtual - 1})" ${paginaAtual === 1 ? 'disabled' : ''}>Anterior</button>
+        <span>Página ${paginaAtual} de ${totalPaginas}</span>
+        <button onclick="mudarPagina(${paginaAtual + 1})" ${paginaAtual === totalPaginas ? 'disabled' : ''}>Próximo</button>
+      `;
+    }
+
+    // Mudar página
+    function mudarPagina(novaPagina) {
+      const totalPaginas = Math.ceil(produtos.length / itensPorPagina);
+      if (novaPagina >= 1 && novaPagina <= totalPaginas) {
+        paginaAtual = novaPagina;
+        exibirProdutos();
+      }
+    }
+
+    // Remover um produto
+    function removerProduto(index) {
+      produtos.splice(index, 1);
+      localStorage.setItem('produtos', JSON.stringify(produtos));
+      const totalPaginas = Math.ceil(produtos.length / itensPorPagina);
+      if (paginaAtual > totalPaginas) {
+        paginaAtual = totalPaginas || 1;
+      }
+      exibirProdutos();
+    }
+  </script>
 </body>
 </html>
